tests/res/traits/error_diamond_parameterized.say
// A *parameterized* init owned via two paths can't auto-resolve (the args differ per path) — error.
trait A {
    pub n;
    init(v) { this.n = v; }
}
trait B with A { init() { A.init(1); } }
trait C with A { init() { A.init(2); } }
type D with B, C { init() {} } // error: Trait 'A' has a parameterized `init` and is `with`-owned via multiple paths ('B' and 'C') — its init can't be auto-resolved; make its init parameterless or `req` all but one path
